# cpp-math

./: .gitignore  CMakeLists.txt  Dockerfile  build.zig
java/: CMakeLists.txt  Test.java  mtmath_c.i
python/: CMakeLists.txt  mtmath_c.i  test.py
src/: include.hpp  mtmath_c.cpp  mtmath_c.h
src/impl/: big_int.cpp  big_int.h  byte_array.cpp  byte_array.h  rational.cpp  rational.h
tests/: big_int.cpp  byte_array.cpp  rationals.cpp
tests/c_bindings/: big_int.cpp
